test: add unit for updating Presentation